--- a/Svetosavlje/Web/Svetosavlje/Views/Pastir/OtacLjubo.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Pastir/OtacLjubo.cshtml
@@ -4,91 +4,11 @@
 
 <h2>Прот. Љубо Милошевић</h2>
 
-<!-- body begins -->
-<body leftMargin="0" background="../bmp/bck.gif" topMargin="0" marginheight="0" marginwidth="0">
-<table cellSpacing="0" cellPadding="0" width="760" border="0">
- <tr>
-  <td vAlign="top" width="155" bgColor="#FFF9F3"> <table cellSpacing="0" cellPadding="0" width="155" bgColor="#fcfaf1" border="0">
-    <tr>
-     <td><IMG height="245" alt="Свети Јустин Ћелијски" src="../bmp/avva.gif" width="155"></td>
-    </tr>
-    <tr>
-     <td><img src="../bmp/izbornik.gif" width="155" border="0" usemap="#Map"></td>
-    </tr>
-   </table></td>
-  <td width="1" bgColor="#000000"><IMG height="1" src="../bmp/spacer.gif" width="1"></td>
-  <td width="1"><IMG height="1" src="../bmp/spacer.gif" width="20"></td>
-  <td vAlign="top" width="100%"><table cellSpacing="0" cellPadding="0" width="100%" border="0">
-    <tr>
-     <td class="helper" align="left" height="20"><A class="helpernav" href="../uvodnik.htm">Уводник</A> :: <A class="helpernav" href="../novosti.asp">Новости</A> :: <A class="helpernav" href="../mapa.htm">Мапа</A> :: <A class="helpernav" href="../adresar/index.asp"> Адресар</A> :: <A class="helpernav" href="../komentar/index.asp">Коментар</A> :: <A class="helpernav" href="../pomoc/index.htm"> Помоћ</A>&nbsp;&nbsp;</td>
-    </tr>
-    <tr>
-     <td bgColor="#000000" height="1"><IMG height="1" src="../bmp/spacer.gif" width="1"></td>
-    </tr>
-    <tr>
-     <td align="right"><IMG height="118" hspace="20" src="../bmp/pastiru.gif" width="216" vspace="5"></td>
-    </tr>
-    <tr>
-     <td bgColor="#000000" height="1"><IMG height="1" src="../bmp/spacer.gif" width="1"></td>
-    </tr>
-    <tr>
-     <td class="helper" height="20"><A class="helpernav" href="../index.php">Светосавље.орг</A>:: <A class="helpernav" href="index.asp">Питање пастиру</A></td>
-    </tr>
-    <tr>
-     <td><p>&nbsp;</p>
-      <p><img src="bmp/o_ljubo.jpg" width="255" height="342" hspace="2" vspace="2" border="1" align="left" style="margin:2px 10px 5px 0px;"></p>
+<p>
+    <img title="Отац Љубо" src="~/Content/images/Pastir/o_ljubo.jpg" width="255" height="342" hspace="2" vspace="2" border="1" align="left" style="margin:2px 10px 5px 0px;"></p>
       <h3>Протојереј-ставрофор Љубо Милошевић</h3>
       <p>Рођен је 1962 године у селу Премећа код Чачка, а по завршетку богословије Светог Саве у Београду уписује се на Богословски факултет СПЦ,  и одмах после женидбе са духовном подржком и препоруком о. Атанасијa (Jефтића) одлази за Минхен.</p>
       <p>У ман. св. Јова Почајевског изучава руски и немачки језик као и руско литургичко-богословско искуство под надзором Марка, архиеп. берлинског и немачког. После додира са Руским православљем и проналаска духовног оца он чврсто решава да остане у РПЗЦ где касније прелази у западноевропску епархију исте јурисдикције.</p>
       <p>Благословом (канонским отпустом) блаженопоч. Стефана, епископа  жичког, под свој омофор прима га архиеп. женевски Антоније (Бартошевч) и рукополаже у храму св. ап. Петра и Павла у Луксембургу у чин ђакона, а у чин презвитера на дан св. Царских мученика у истоименом храму у Паризу (17 јула, 1985 г.). Указом архиеп. Антонија прима се послушања помоћника духовника Леснинског женског манастира у Француској где остаје да служи две године (бивши руски Хоповски манастир). Поред овог послушања повремено је обслуживао и парохије у Холандији, Белгији, Швајцарској, Италији и Шпанији.</p>
       <p>У пролеће 1987 сели се у САД и служи при Синодалном храму Пресвете Богородице Курске у Њујорку, да би при крају године био назначен на парохију Свете Тројице у Вајнланду, Њуџерзи (источноамеричка епархија). Одлуком надлежног архијереја маја 1999 г. унапређен је у чин протојереја. Отац Љубо на овој парохији још увек служи.</p>
       <p>О. Љубо је члан Уредништва сајта Светосавље од 2002. године.</p>
-      <p>&nbsp;</p></td>
-    </tr>
-    <tr>
-     <td bgColor="#000000" height="1"><IMG height="1" src="../bmp/spacer.gif" width="1"></td>
-    </tr>
-    <tr>
-     <td class="helper" align="right" height="20"><table cellSpacing="0" cellPadding="10" width="100%" border="0">
-       <tr>
-        <td vAlign="bottom" width="215"><em><font size="1">© 2003 Светосавље.орг<br>
-         Сва права задржана.</font></em></td>
-        <td class="helper" vAlign="top" align="right" width="243">[<a href="../index.php" class="helpernav">Светосавље.орг</a>]<br>
-         [<a href="../biblioteka/index.htm" class="helpernav">Библиотека</a>]<br>
-	 [<a href="../molitve/index.php" class="helpernav">Молитве</a>]<br>
-         [<a href="../riznice/index.htm" class="helpernav">Ризнице</a>]<br>
-         [<a href="../pojanje/index.htm" class="helpernav">Појање</a>]<br>
-         [<a href="../svetinje/index.htm" class="helpernav">Светиње</a>]<br>
-         [<a href="../slovenski/index.htm" class="helpernav">ЦрквеноСловенски језик</a>]<br>
-         [<a href="../pastir/index.php" class="helpernav">Питање пастиру</a>]<br>
-	 [<a href="http://blogs.svetosavlje.org/vesti/" class="helpernav">Вести</a>]<br>
-         [<a href="../lista/index.php" class="helpernav">Листа</a>]<br>
-         [<a href="../roditelji/uvodnik.html" class="helpernav">Родитељска Листа</a>]<br>
-         [<a href="http://www.svedokverni.org/" class="helpernav">Мисија</a>]</td>
-        <td width="66" valign="top" class="helper">[<a href="../uvodnik.htm" class="helpernav">Уводник</a>]<br>
-         [<a href="../novosti.asp" class="helpernav">Новости</a>]<br>
-         [<a href="../mapa.htm" class="helpernav">Мапа</a>]<br>
-         [<a href="../adresar/index.asp" class="helpernav">Адресар</a>]<br>
-         [<a href="../komentar/index.asp" class="helpernav">Коментар</a>]<br>
-         [<a href="../pomoc/index.htm" class="helpernav">Помоћ</a>]</td>
-       </tr>
-      </table></td>
-    </tr>
-   </table></td>
- </tr>
-</table>
-<map name="Map">
-  <area shape="rect" coords="38,16,137,34" href="../biblioteka/index.htm">
-  <area shape="rect" coords="64,44,140,66" href="../molitve/index.php">
-  <area shape="rect" coords="67,79,141,97" href="../riznice/index.htm">
-  <area shape="rect" coords="77,110,140,128" href="../pojanje/index.htm">
-  <area shape="rect" coords="61,143,140,161" href="../svetinje/index.htm">
-  <area shape="rect" coords="62,175,141,226" href="../slovenski/index.htm">
-  <area shape="rect" coords="67,237,139,273" href="../pastir/index.php">
-  <area shape="rect" coords="75,287,139,305" href="http://blogs.svetosavlje.org/vesti/">
-  <area shape="rect" coords="74,319,138,337" href="../lista/index.php">
-  <area shape="rect" coords="36,345,143,384" href="../roditelji/uvodnik.html">
-  <area shape="rect" coords="80,394,145,415" href="http://www.svedokverni.org/">
-</map>
-</body>
-<!-- body ends -->
