--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Index.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Index.cshtml
@@ -10,5 +10,47 @@
             <li class="active">Ризнице</li>
         </ul>
 
+         <tr> 
+          <td valign="top"> 
+            <p align="center"> 
+            <p align="right"><em>&quot;..Неописиво Слово Очево из Тебе је, Богородице, 
+              постало описиво оваплотивши се. Оскрнављени образ повративши у древно 
+              (стање), оно га је сјединило с божанском лепотом. Исповедајући спасење 
+              ми га делом и речју изображавамо..&quot;</em><br>
+              <em><br>
+              <span class="sitno">(Кондак Победе Православља)</span></em>
+                <br /><br /><br />
+            <p align="right"> 
+            <table width="100%" border="0" cellspacing="0" cellpadding="0">
+              <tr valign="top"> 
+                <td width="24%" height="215"> 
+                  <div align="center"><a href="Ikone.cshtml" target="_self"><img src="~/Content/images/Riznice/ikone.gif" width="90" height="174" border="0"></a></div>
+                </td>
+                <td width="25%" height="215"> 
+                  <div align="center"><a href="Freske.cshtml" target="_self"><img src="~/Content/images/Riznice/freske.gif" width="90" height="174" border="0"></a></div>
+                </td>
+                <td width="26%" height="215"> 
+                  <div align="center"><a href="Krasnopis.cshtml" target="_self"><img src="~/Content/images/Riznice/Krasnopis.gif" width="101" height="177" border="0"></a></div>
+                </td>
+                <td width="25%" height="215"> 
+                  <div align="center"><a href="Jevandjelja.cshtml" target="_self"><img src="~/Content/images/Riznice/svetopismo.gif" width="91" height="177" border="0"></a></div>
+                </td>
+              </tr>
+              <tr valign="top"> 
+                <td width="24%"> 
+                  <div align="center"><a href="Tekstovi.cshtml" target="_self"><img src="~/Content/images/Riznice/Tekstovi.gif" width="91" height="177" border="0"></a></div>
+                </td>
+                <td width="25%"> 
+                  <div align="center"><a href="Utvari.cshtml" target="_self"><img src="~/Content/images/Riznice/utvari.gif" width="91" height="177" border="0"></a></div>
+                </td>
+                <td width="26%"> 
+                  <div align="center"><a href="Duborez.cshtml" target="_self"><img src="~/Content/images/Riznice/duborez.gif" width="96" height="177" border="0"></a></div>
+                </td>
+                <td width="25%"> 
+                  <div align="center"><a href="Odezde.cshtml" target="_self"><img src="~/Content/images/Riznice/odezde.gif" width="86" height="177" border="0"></a></div>
+                </td>
+              </tr>
+            </table>
+
     </div>
 </div>
