--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikone.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikone.cshtml
@@ -8,3 +8,64 @@
             <li>@Html.ActionLink("Ризнице", "Index", "Riznice")<span class="divider">/</span></li>
             <li class="active">Иконе</li>
         </ul>
+  <tr> 
+          <td valign="top" height="323"> 
+            <p align="center"> 
+            <p align="right"><em>&quot;..Неописиво Слово Очево из Тебе је, Богородице, 
+              постало описиво оваплотивши се. Оскрнављени образ повративши у древно 
+              (стање), оно га је сјединило с божанском лепотом. Исповедајући спасење 
+              ми га делом и речју изображавамо..&quot;</em><br>
+              <em><br>
+              <span class="sitno">(Кондак Победе Православља)</span></em><br /><br /><br />
+            <p align="right"> 
+            <table width="100%" border="0" cellspacing="0" cellpadding="0">
+              <tr valign="top"> 
+                <td width="24%" height="118"> 
+                  <div align="center"><a href="@Url.Action("IkoneICXC1", "Riznice")"><img src="~/Content/images/Riznice/Ikonice/icxc11.gif" width="74" height="113" border="0"></a></div>
+                </td>
+                <td width="25%" height="118"> 
+                  <div align="center"><a href="Ikone%20Bogorodice%201.htm" target="_self"><img src="~/Content/images/Riznice/Ikonice/bgrd.gif" width="74" height="113" border="0"></a></div>
+                </td>
+                <td width="26%" height="118"> 
+                  <div align="center"><a href="Ikone%20Angela%201.htm" target="_self"><img src="~/Content/images/Riznice/Ikonice/angel.gif" width="74" height="113" border="0"></a></div>
+                </td>
+                <td width="25%" height="118"> 
+                  <div align="center"><a href="Ikone%20Praznika%201.htm" target="_self"><img src="~/Content/images/Riznice/Ikonice/Praznici.gif" width="89" height="113" border="0"></a></div>
+                </td>
+              </tr>
+              <tr valign="top"> 
+                <td width="24%"> 
+                  <div align="center"><b><font size="2" face="Arial, Helvetica, sans-serif">Иконе 
+                    </font></b></div>
+                </td>
+                <td width="25%"> 
+                  <div align="center"><b><font size="2"><font size="2"><font size="2" face="Arial, Helvetica, sans-serif">Иконе 
+                    </font></font></font></b></div>
+                </td>
+                <td width="26%"> 
+                  <div align="center"><b><font size="2"><font size="2"><font size="2" face="Arial, Helvetica, sans-serif">Иконе 
+                    </font></font></font></b></div>
+                </td>
+                <td width="25%"> 
+                  <div align="center"><b><font size="2"><font size="2"><font size="2" face="Arial, Helvetica, sans-serif">Иконе 
+                    </font></font></font></b></div>
+                </td>
+              </tr>
+              <tr valign="top"> 
+                <td width="24%"> 
+                  <div align="center"><b><font size="2" face="Arial, Helvetica, sans-serif">Господње</font></b></div>
+                </td>
+                <td width="25%"> 
+                  <div align="center"><b><font size="2"><font size="2"><font face="Arial, Helvetica, sans-serif">Пресвете 
+                    Богородице</font></font></font></b></div>
+                </td>
+                <td width="26%"> 
+                  <div align="center"><b><font size="2"><font size="2"><font face="Arial, Helvetica, sans-serif">ангелских 
+                    сила </font></font></font></b></div>
+                </td>
+                <td width="25%"> 
+                  <div align="center"><b><font size="2"><font size="2"><font face="Arial, Helvetica, sans-serif">светих 
+                    празника </font></font></font></b></div>
+                </td>
+              </tr>
+            </table>
