--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Index.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Index.cshtml
@@ -24,7 +24,7 @@
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr valign="top"> 
                 <td width="24%" height="215"> 
-                  <div align="center"><a href="Ikone.cshtml" target="_self"><img src="~/Content/images/Riznice/ikone.gif" width="90" height="174" border="0"></a></div>
+                  <div align="center"><a href="@Url.Action("Ikone", "Riznice")"><img src="~/Content/images/Riznice/ikone.gif" width="90" height="174" border="0"></a></div>
                 </td>
                 <td width="25%" height="215"> 
                   <div align="center"><a href="Freske.cshtml" target="_self"><img src="~/Content/images/Riznice/freske.gif" width="90" height="174" border="0"></a></div>
