--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/IkoneICXC1.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/IkoneICXC1.cshtml
@@ -5,7 +5,8 @@
 <h2>Ikone IC XC 1</h2>
         <ul class="breadcrumb">
             <li>@Html.ActionLink("Светосавље.орг", "Index", "Home")<span class="divider">/</span></li>
-            <li>@Html.ActionLink("Иконе", "Index", "Ikone")<span class="divider">/</span></li>
+            <li>@Html.ActionLink("Ризница", "Index", "Riznice")<span class="divider">/</span></li>
+            <li>@Html.ActionLink("Иконе", "Ikone", "Riznice")<span class="divider">/</span></li>
             
             <li class="active">Исус Христос 1</li>
         </ul>
