--- a/Svetosavlje/Web/Svetosavlje/Views/Shared/_Layout.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                         <li><a href="http://www.svedokverni.org/">Мисија</a></li>
                         <li>@Html.ActionLink("Појање", "Pojanje", "Home")</li>
                         <li>@Html.ActionLink("Светиње", "Svetinje", "Home")</li>
-                        <li>@Html.ActionLink("Риѕнице", "Index", "Riznice")</li>
+                        <li>@Html.ActionLink("Ризнице", "Index", "Riznice")</li>
                         <li>@Html.ActionLink("Црквенословенски језик", "Crkvenoslovenski", "Home")</li>
                     </ul>
                 </div>
