--- a/Svetosavlje/Web/Svetosavlje/Views/Pastir/OtacLjubo.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Pastir/OtacLjubo.cshtml
@@ -3,6 +3,11 @@
 }
 
 <h2>Прот. Љубо Милошевић</h2>
+             <ul class="breadcrumb">
+            <li>@Html.ActionLink("Светосавље.орг", "Index", "Home")<span class="divider">/</span></li>
+             <li>@Html.ActionLink("Пастир", "Index", "Pastir")<span class="divider">/</span></li>
+            <li class="active">Отац Љубо</li>
+        </ul>
 
 <p>
     <img title="Отац Љубо" src="~/Content/images/Pastir/o_ljubo.jpg" width="255" height="342" hspace="2" vspace="2" border="1" align="left" style="margin:2px 10px 5px 0px;"></p>
