--- a/Svetosavlje/Web/Svetosavlje/Views/Pastir/OtacSrboljub.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Pastir/OtacSrboljub.cshtml
@@ -3,6 +3,11 @@
 }
 
 <h2>Протојереј-ставрофор Србољуб Милетић</h2>
+               <ul class="breadcrumb">
+            <li>@Html.ActionLink("Светосавље.орг", "Index", "Home")<span class="divider">/</span></li>
+             <li>@Html.ActionLink("Пастир", "Index", "Pastir")<span class="divider">/</span></li>
+            <li class="active">Отац Србољуб</li>
+        </ul>
 
 
       <p>
