--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikone.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikone.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Ikone";
 }
 
-<h2>Ikone</h2>
+<h2>Иконе</h2>
         <ul class="breadcrumb">
             <li>@Html.ActionLink("Светосавље.орг", "Index", "Home")<span class="divider">/</span></li>
             <li>@Html.ActionLink("Ризнице", "Index", "Riznice")<span class="divider">/</span></li>
@@ -24,7 +24,7 @@
                   <div align="center"><a href="@Url.Action("IkoneICXC1", "Riznice")"><img src="~/Content/images/Riznice/Ikonice/icxc11.gif" width="74" height="113" border="0"></a></div>
                 </td>
                 <td width="25%" height="118"> 
-                  <div align="center"><a href="Ikone%20Bogorodice%201.htm" target="_self"><img src="~/Content/images/Riznice/Ikonice/bgrd.gif" width="74" height="113" border="0"></a></div>
+                  <div align="center"><a href="@Url.Action("Ikone_Bogorodice1", "Riznice")"><img src="~/Content/images/Riznice/Ikonice/bgrd.gif" width="74" height="113" border="0"></a></div>
                 </td>
                 <td width="26%" height="118"> 
                   <div align="center"><a href="Ikone%20Angela%201.htm" target="_self"><img src="~/Content/images/Riznice/Ikonice/angel.gif" width="74" height="113" border="0"></a></div>
