--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/IkoneICXC1.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/IkoneICXC1.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "IkoneICXC1";
 }
 
-<h2>Ikone IC XC 1</h2>
+<h2>Иконе ИС ХС 1</h2>
         <ul class="breadcrumb">
             <li>@Html.ActionLink("Светосавље.орг", "Index", "Home")<span class="divider">/</span></li>
             <li>@Html.ActionLink("Ризница", "Index", "Riznice")<span class="divider">/</span></li>
@@ -195,23 +195,4 @@
                   </div>
                 </td>
               </tr>
-                <tr> 
-                <td height="41"> 
-                  <div align="center"> 
-                    <table bordercolor=#999999 cellspacing=0 cellpadding=3 width=510 
-            align=center border=1>
-                      <tbody> 
-                      <tr> 
-                        <td bordercolor=#ffffff bgcolor=#f0f0f0 height="23"> 
-                          <div align="center"><font face="Arial, Helvetica, sans-serif" size="2"><a href="~/Content/images/Riznice/Ikone/Ikone_BCe 1.zip">Преузми 
-                            комплет ИКОНЕ БОГОРОДИЦЕ 1 </a>(1.7 МБ)</font></div>
-                        </td>
-                      </tr>
-                      </tbody> 
-                    </table>
-                  </div>
-                </td>
-              </tr>
-            </table>
-          </td>
-        </tr>
+          
