--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/IkoneICXC2.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/IkoneICXC2.cshtml
@@ -2,11 +2,12 @@
     ViewBag.Title = "IkoneICXC2";
 }
 
-<h2>Ikone IC XC 2</h2>
+<h2>Иконе ИС ХС 2</h2>
         <ul class="breadcrumb">
             <li>@Html.ActionLink("Светосавље.орг", "Index", "Home")<span class="divider">/</span></li>
             <li>@Html.ActionLink("Ризнице", "Index", "Riznice")<span class="divider">/</span></li>
-            <li>@Html.ActionLink("Иконе", "Index", "Ikone")<span class="divider">/</span></li>
+            <li>@Html.ActionLink("Иконе", "Ikone", "Riznice")<span class="divider">/</span></li>
+            <li>@Html.ActionLink("Исус Христос 1", "IkoneICXC1", "Riznice")<span class="divider">/</span></li>
             <li class="active">Исус Христос 2</li>
 
     </ul>
