--- a/Svetosavlje/Web/Svetosavlje/Views/Pastir/OtacIvan.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Pastir/OtacIvan.cshtml
@@ -1,8 +1,13 @@
 ﻿@{
-    ViewBag.Title = "OtacIvan";
+    ViewBag.Title = "Otac Ivan";
 }
 
 <h2>Отац Иван</h2>
+         <ul class="breadcrumb">
+            <li>@Html.ActionLink("Светосавље.орг", "Index", "Home")<span class="divider">/</span></li>
+             <li>@Html.ActionLink("Пастир", "Index", "Pastir")<span class="divider">/</span></li>
+            <li class="active">Отац Иван</li>
+        </ul>
 
 <p>
     <img title="Отац Иван" src="~/Content/images/Pastir/o_ivan.jpg"  width="297" height="365" hspace="2" vspace="2" border="1" align="left" style="margin:2px 10px 5px 0px;"></p>
