Приказ календара на Прологу
Први дан седмице је понедељак.

--- a/Svetosavlje/Web/Svetosavlje/Views/Prolog/Index.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Prolog/Index.cshtml
@@ -15,7 +15,7 @@
 
 <script>
     $(function () {
-        $('#inlineDatepicker').calendarsPicker({ calendar: $.calendars.instance('julian', 'sr'), onSelect: showDate, changeMonth: false, monthsToShow: 3, defaultDate: '@Model.Datum' });
+        $('#inlineDatepicker').calendarsPicker({ calendar: $.calendars.instance('julian', 'sr'), onSelect: showDate, changeMonth: false, monthsToShow: 3, defaultDate: '@Model.Datum', firstDay: 1 });
     });
 
 
