--- a/Svetosavlje/Web/Svetosavlje/Views/Pastir/Index.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Pastir/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Globalization;
 @using Svetosavlje.Models;
-@using Svetosavlje.Data_Layer
+@using Svetosavlje.Interfaces.Classes;
 @model Svetosavlje.Models.PastirModel
 @{
     ViewBag.Title = "Питање пастиру";
