--- a/Svetosavlje/Web/Svetosavlje/Views/Shared/_Layout.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                         <li>@Html.ActionLink("Питање пастиру", "Index", "Pastir")</li>
                         <li>@Html.ActionLink("Пролог", "Index", "Prolog")</li>
                         <li>@Html.ActionLink("Молитве", "Molitve", "Home")</li>
-                        <li><a href="http://www.svetosavlje.org/listarhiva/Home.aspx">Листа</a></li>
+                        <li>@Html.ActionLink("Листа", "Index", "Lista")</li>
                         <li>@Html.ActionLink("Библиотека", "Biblioteka", "Home")</li>
                         <li><a href="http://blogs.svetosavlje.org/vesti/">Вести</a></li>
                         <li><a href="http://www.svedokverni.org/">Мисија</a></li>
