--- a/Svetosavlje/Web/Svetosavlje/Views/Home/Index.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Home/Index.cshtml
@@ -109,13 +109,7 @@
             <div class="row">
                 <div class="span8">
                     <h2> <a href="http://www.svetosavlje.org/listarhiva/Home.aspx">Листа</a> »</h2>
-
-                    <ul>
-                    @foreach (ListaArhiva t in Model.Lista)
-                    {
-                       <li> <a href="http://www.svetosavlje.org/listarhiva/Home.aspx/Topic?topicId=@t.id">@t.naziv</a> (@Html.Encode(t.count)) : <a href="http://www.svetosavlje.org/listarhiva/Home.aspx/UserMessages?userId=@t.updaterID">@t.updater</a>, @t.datum.ToString() </li>
-                    }
-                    </ul>
+                    @Html.Action("ListaTopics","Lista", new {rows = 10, boolList = true})
                 </div>
             </div>
 
