--- a/Svetosavlje/Web/Svetosavlje/Views/Home/Biblioteka.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Home/Biblioteka.cshtml
@@ -87,8 +87,8 @@
         <p>&nbsp;</p>
         <p><strong>БОГОСЛОВЉЕ СВЕТООТАЧКОГ ПОДВИГА И ИСКУСТВА<a name="bogoslovlje"></a></strong></p>
         <table cellpadding="10">
-           <tr> 
-            <td><strong><a href="/biblioteka/Dobrotoljublje/index.htm"><img src="../bmp/vdobro.jpg" width="241" height="85" vspace="5" border="0"></a></strong><br> 
+           <tr>
+            <td><strong><a href="/biblioteka/Dobrotoljublje/index.htm"><img src="~/Content/images/Biblioteka/vdobro.jpg" width="241" height="85" vspace="5" border="0"></a></strong><br> 
              <a href="/biblioteka/Dobrotoljublje/index.htm">ДОБРОТОЉУБЉЕ</a><br> <span class="sitno">том I, II, III и IV</span> </td>
            </tr>
           </table>
