--- a/Svetosavlje/Web/Svetosavlje/Views/Pastir/_SveTemeSaPitanjima.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Pastir/_SveTemeSaPitanjima.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Globalization;
 @using Svetosavlje.Models;
-@using Svetosavlje.Data_Layer
+@using Svetosavlje.Interfaces.Classes
 @model Svetosavlje.Models.PastirModel
 <div class="accordion" id="accordion1">
     @foreach (PastirTopic topic in Model.PastirTopics)
