--- a/Svetosavlje/Web/Svetosavlje/Views/Home/Biblioteka.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Home/Biblioteka.cshtml
@@ -170,8 +170,8 @@
           <p>&nbsp;</p>
           <p><strong>ДИЈАСПОРА<a name="dijaspora"></a></strong></p>
           <ul class="ulbmp">
-	      <li class="listbmp2"><a href="/biblioteka/Izazovi/MitropolitSalibо28kakonu.htm">28. КАНОН 4. ВАСЕЉЕНСКОГ САБОРА - ВАЖАН ИЛИ НЕВАЖАН ДАНАС</a> - Митрополит ФИЛИП Салиба</li>
-	      <li class="listbmp2"><a href="/biblioteka/Izazovi/Jurisdikcija/Jurisdikcija.htm">ЦРКВЕНА ђакон ГЕОРГИЈЕ (ЈУРИЈ)СДИКЦИЈА НАД ПРАВОСЛАВНОМ ДИАСПОРОМ</a> -  СЕРГИЈЕ Троицки</li>
+	      <li class="listbmp2"><a href="/biblioteka/Izazovi/MSalib.htm">28. КАНОН 4. ВАСЕЉЕНСКОГ САБОРА - ВАЖАН ИЛИ НЕВАЖАН ДАНАС</a> - Митрополит ФИЛИП Салиба</li>
+	      <li class="listbmp2"><a href="/biblioteka/Izazovi/Jurisdikcija/Jurisdikcija.htm">ЦРКВЕНА ЈУРИСДИКЦИЈА НАД ПРАВОСЛАВНОМ ДИАСПОРОМ</a> -  СЕРГИЈЕ Троицки</li>
 	      <li class="listbmp2"><a href="/biblioteka/Izazovi/Moskva_Konstantinopolj.htm">ПРАВОСЛАВНА ДИЈАСПОРА</a> - Писмо Патријарха Московског и целе Русије Алексеја II Патријарху Константинопољском Вартоломеју</li>
           <li class="listbmp2"><a href="/biblioteka/Izazovi/angazovanat.htm">АНГАЖОВАНА ТЕОЛОГИЈА ЦАРИГРАДСКЕ ПАТРИЈАРШИЈЕ</a> - Прот. РАДОМИР В. Поповић</li>  
           <li class="listbmp2"><a href="/biblioteka/Teologija/Sabornost.htm">ПОВОДОМ САЗИВА &quot;ВЕЛИКОГ САБОРА ПРАВОСЛАВНЕ ЦРКВЕ&quot;</a> - Преп. ЈУСТИН Ћелијски</li>
@@ -283,7 +283,7 @@
 	      <li class="listbmp2"><a href="/biblioteka/Bogosluzbeni/SvetiSerafimZvezdinskiLiturgija/SvetiSerafimZvezdinskiLiturgija.htm">БИТИ СА ГОСПОДОМ НА СВЕТОЈ ЛИТУРГИЈИ<BR> <i>Тумачење Божанствене Службе</i></a> - Свештеномученик СЕРАФИМ Звездински</li>
 	      <li class="listbmp2"><a href="/biblioteka/Bogosluzbeni/SluzbaNovomucenicimaSrpskim/SluzbaNovomucenicimaSrpskim.htm">ЂЕРДАН ОД МЕРЏАНА<BR> <i>(Служба Новомученицима србским)</i></a> - Свети НИКОЛАЈ Српски</li>
 	      <li class="listbmp2"><a href="/biblioteka/Bogosluzbeni/Liturgija/Liturgija.htm">ТУМАЧЕЊЕ БОЖАНСТВЕНЕ ЛИТУРГИЈЕ</a> - Јеромонах ГРИГОРИЈЕ Светогорац</li>
-	      <li class="listbmp2"><a href="/biblioteka/Bogosluzbeni/PravilnikII/Pravilnik.html">ПРАВИЛНИК - ПОМОЋНА БОГОСЛУЖБЕНА КЊИГА</a> - Епископ тимочки МЕЛЕНТИЈЕ</li>
+	      <li class="listbmp2"><a href="/biblioteka/Bogosluzbeni/PravilnikII/Pravilnik.htm">ПРАВИЛНИК - ПОМОЋНА БОГОСЛУЖБЕНА КЊИГА</a> - Епископ тимочки МЕЛЕНТИЈЕ</li>
 	      <li class="listbmp2"><a href="/biblioteka/Bogosluzbeni/Liturgika/Liturgika_.htm">ЛИТУРГИКА</a> - Архиепископ АВЕРКИЈЕ Таушев</li>
 	      <li class="listbmp2"><a href="/biblioteka/MolitvenikJefremaSirina/index.htm">МОЛИТВЕНИК И ПСАЛТИР</a> - Преподобни ЈЕФРЕМ Сирин</li>
           <li class="listbmp2"><a href="/biblioteka/Bogosluzbeni/Kanon-Krstu.htm">КАНОН РАСПЕЋУ ГОСПОДЊЕМ</a><br>(Плач Пресвете Богородице) - глас 6. </li>
@@ -396,8 +396,8 @@
           <p>&nbsp;</p>
           <p><strong>КЊИГЕ И ИЗАБРАНИ ЧЛАНЦИ<a name="knjige"></a></strong></p>
 	      <table cellpadding="10">
-           <tr> 
-            <td><strong><a href="/biblioteka/vlNikolaj/Vladika_Nikolaj.htm"><img src="../bmp/zicki.jpg" width="150" height="80" vspace="5" border="0"></a></strong><br> 
+           <tr>
+            <td><strong><a href="/biblioteka/vlNikolaj/Vladika_Nikolaj.htm"><img src="~/Content/images/Biblioteka/zicki.jpg" width="150" height="80" vspace="5" border="0"></a></strong><br> 
              <a href="/biblioteka/vlNikolaj/Vladika_Nikolaj.htm">ИЗАБРАНА ДЕЛА<br>СВЕТОГ НИКОЛАЈА ВЕЛИМИРОВИЋА</a><br> <span class="sitno"></span> </td>
            </tr>
           </table>
@@ -481,9 +481,9 @@
           <p><strong>ЖИТИЈА СВЕТИХ<a name="zitija"></a></strong></p>
 	      <table cellpadding="10">
            <tr> 
-            <td><strong><a href="/biblioteka/prolog/index.php"><img src="../bmp/mprolog.jpg" border="0"></a></strong><br> 
+            <td><strong><a href="/biblioteka/prolog/index.php"><img src="~/Content/images/Biblioteka/mprolog.jpg" border="0"></a></strong><br> 
              <a href="/biblioteka/prolog/index.php">ОХРИДСКИ ПРОЛОГ</a></td>
-            <td><strong><a href="/biblioteka/AvaJustin/ZitijaSvetih/ZitijaSvetih.htm"><img src="../bmp/IkonaSvihSvetih4.jpg" alt="ЖИТИЈА СВЕТИХ" border="0"></a></strong><br>
+            <td><strong><a href="/biblioteka/AvaJustin/ZitijaSvetih/ZitijaSvetih.htm"><img src="~/Content/images/Biblioteka/IkonaSvihSvetih4.jpg" alt="ЖИТИЈА СВЕТИХ" border="0"></a></strong><br>
               <a href="/biblioteka/AvaJustin/ZitijaSvetih/ZitijaSvetih.htm">ЖИТИЈА СВЕТИХ</a></td>
            </tr>
           </table>
@@ -786,10 +786,10 @@
 	      <p>&nbsp;</p>
 	      <p><strong>СВЕТО ПИСМО И ТУМАЧЕЊА<a name="svetopismo"></a></strong></p>
 	      <table cellpadding="0" cellspacing="10">
-           <tr> 
-            <td valign="top" style="padding-right:5px;"><a href="/biblioteka/Svetopismo/Makaveji/index.htm"><img src="../bmp/mmakaveji.jpg" width="150" height="80" vspace="5" border="0"></a><br>
+           <tr>
+            <td valign="top" style="padding-right:5px;"><a href="/biblioteka/Svetopismo/Makaveji/index.htm"><img src="~/Content/images/Biblioteka/mmakaveji.jpg" width="150" height="80" vspace="5" border="0"></a><br>
              <a href="/biblioteka/Svetopismo/Makaveji/index.htm">КЊИГЕ МАКАВЕЈСКЕ</a></td>
-            <td valign="top"><a href="/biblioteka/Svetopismo/Psaltir/index.htm"><img src="../bmp/vpsaltir.gif" width="400" height="80" vspace="5" border="0"></a><br>
+            <td valign="top"><a href="/biblioteka/Svetopismo/Psaltir/index.htm"><img src="~/Content/images/Biblioteka/vpsaltir.gif" width="400" height="80" vspace="5" border="0"></a><br>
              <a href="/biblioteka/Svetopismo/Psaltir/index.htm">ПСАЛТИР</a></td>
            </tr>
           </table>
