More fixing for #36

--- a/Svetosavlje/Web/Svetosavlje/Views/Home/Biblioteka.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Home/Biblioteka.cshtml
@@ -802,22 +802,22 @@
         <p>&nbsp;</p>
         <p><strong>СВЕТО ПИСМО И ТУМАЧЕЊА<a name="svetopismo"></a></strong></p>
 
-        <p>
-            <table cellspacing="10">
-                <tr>
-                    <td valign="top"><a href="/biblioteka/Svetopismo/Makaveji/index.htm">
-                        <img src="~/Content/images/Biblioteka/mmakaveji.jpg" vspace="5" border="0"></a>
-                        <a href="/biblioteka/Svetopismo/Makaveji/index.htm">
-                            <br />
-                            КЊИГЕ МАКАВЕЈСКЕ</a></td>
-                    <td valign="top"><a href="/biblioteka/Svetopismo/Psaltir/index.htm">
-                        <img src="~/Content/images/Biblioteka/vpsaltir.gif" vspace="5" border="0"></a>
-                        <a href="/biblioteka/Svetopismo/Psaltir/index.htm">
-                            <br />
-                            ПСАЛТИР</a></td>
-                </tr>
-            </table>
-        </p>
+
+        <table cellpadding="10">
+            <tr>
+                <td valign="top"><a href="/biblioteka/Svetopismo/Makaveji/index.htm">
+                    <img src="~/Content/images/Biblioteka/mmakaveji.jpg" vspace="5" border="0"></a>
+                    <a href="/biblioteka/Svetopismo/Makaveji/index.htm">
+                        <br />
+                        КЊИГЕ МАКАВЕЈСКЕ</a></td>
+                <td valign="top"><a href="/biblioteka/Svetopismo/Psaltir/index.htm">
+                    <img src="~/Content/images/Biblioteka/vpsaltir.gif" vspace="5" border="0"></a>
+                    <a href="/biblioteka/Svetopismo/Psaltir/index.htm">
+                        <br />
+                        ПСАЛТИР</a></td>
+            </tr>
+        </table>
+
         <ul class="ulbmp">
 
 
